[project]
name = "itiner-aiagent"
version = "0.1.0"
description = "AI-powered travel planning agent with FastAPI, LangGraph, and RAG"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    # LangGraph & LangChain
    "langgraph>=0.2.60",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.29",
    # Observability
    "langfuse>=2.57.2",
    "prometheus-client>=0.21.1",
    # Database & Memory
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.4",
    "langgraph-checkpoint-postgres>=2.0.12",
    "mem0ai>=0.1.42",
    "pgvector>=0.3.6",
    "neo4j>=5.27.0",
    "redis>=5.2.1",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    # Rate Limiting
    "slowapi>=0.1.9",
    # Logging & CLI
    "structlog>=24.4.0",
    "rich>=13.9.4",
    # Retry
    "tenacity>=9.0.0",
    # HTTP
    "httpx>=0.28.1",
    # Environment
    "python-dotenv>=1.0.1",
    "langchain-neo4j>=0.7.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.1",
]

[project.scripts]
serve = "app.main:start"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
